--- a/Folder11/newxhtml.xhtml
+++ b/Folder11/newxhtml.xhtml
@@ -6,11 +6,12 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-    20150205 liu add
+   
         <title>TODO supply a title</title>
     </head>
     
     //V1
+    // liu 1619 add local
   
     <body>
         <div>TODO write content</div>
