--- a/Folder11/newxhtml.xhtml
+++ b/Folder11/newxhtml.xhtml
@@ -12,6 +12,7 @@ and open the template in the editor.
     
     //V1
     // liu 1619 add local
+    // liu 1620 add local
   
     <body>
         <div>TODO write content</div>
